Added files via upload

--- a/client/list_actions.html
+++ b/client/list_actions.html
@@ -11,14 +11,37 @@
       </label>
 
 	<ul class="listactions" id = "list">
-	  {{#each myactions}}
-        {{> myaction}}
+	   {{#each myactions}}
+        <!-- {{> myaction}} -->
+        <!-- {{> dropdown name={{text}} data=tabData}} -->
+        {{> dropdown_example}}
       {{/each}}
 	</ul>
 
-	{{> Template.dynamic template="action_description" data=tabData}}
+	<!-- {{> Template.dynamic template="action_description" data=tabData}} -->
 </template>
 
-<template name="myaction">
+<!-- <template name="myaction">
   <li><a href="#">{{category}}:{{text}}</a></li>
+</template> -->
+
+<template name="dropdown_example">
+    {{#if active}}
+    <ul class="close">
+        <button>Close</button>
+      </ul>
+        <h2>{{text}}</h2>
+          <p>Description of the activity goes here</p>
+          
+      <ul class="submit">
+        <button>Add this task to your list</button>
+      </ul>
+    {{else}}
+        <li><a href="#">{{category}}:{{text}}</a></li>
+    {{/if}}
 </template>
+
+<!-- <template name="myaction">
+    <li><a href="#">{{category}}:{{text}}</a></li>
+    {{> Template.dynamic template=templateName data=templateData}}
+</template> -->
