--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -1,6 +1,6 @@
 <template name="dashboard">
-  <div id = "dashlist">
-      <ul class="nav nav-pills2" id = "navigator">
+  <div id = "innerdash">
+      <ul class="nav nav-pills2" id = "innernav">
         <li data-template="activities" role="presentation" class="active"><a href="#">Recent Activities</a></li>
         <li data-template="actions" role="presentation"><a href="#">My Actions</a></li>
         <li data-template="reminders" role="presentation"><a href="#">Reminders</a></li>
