--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
         <li data-template="list_actions" role="presentation"><a href="#">Actions</a></li>
       </ul>
   </div>
-  <div id = "outer">
+  <div>
       <div id = "template">
         {{> Template.dynamic template=tab data=tabData}}
         </div>
