--- a/client/myprofile.html
+++ b/client/myprofile.html
@@ -1,9 +1,9 @@
 <template name="myprofile">
-  <div id = "dashlist">
-      <ul class="nav nav-pills2" id = "navigator">
-        <li data-template="about" role="presentation" class="active2"><a href="#">About</a></li>
+  <div id = "innerdash">
+      <ul class="nav nav-pills2" id = "innernav">
+        <li data-template="about" role="presentation" class="active"><a href="#">About</a></li>
         <li data-template="travel" role="presentation"><a href="#">Travel</a></li>
-        <li data-template="home" role="presentation" class="active2"><a href="#">Home Energy</a></li>
+        <li data-template="home" role="presentation"><a href="#">Home Energy</a></li>
         <li data-template="food" role="presentation"><a href="#">Food</a></li>
       </ul>
   </div>
