--- a/client/home.html
+++ b/client/home.html
@@ -1,5 +1,7 @@
 <template name="home">
-  <h3>Hello</h3>
-  <h4>You haved saved 30t of CO2</h4>
-  <h4>You haved saved $2,242</h4>
+    <div id = "home">
+      <h3 class = "hello">Hello</h3>
+      <h3 class = "info">You haved saved <strong>30t</strong> of CO2</h3>
+      <h3 class = "info">You haved saved <strong>$2,242</strong></h3>
+    </div>
 </template>
