--- a/client/actions.html
+++ b/client/actions.html
@@ -1,4 +1,4 @@
-<template name="sub_content">
+<template name="actions">
   <h3 class="page-header" style="text-transform: capitalize;">{{this.contentType}}</h3>
   <ul class="list-group">
     {{#each this.items}}
