--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -8,7 +8,7 @@
   </div>
   <div id = "outer">
       <div id = "template">
-        {{> Template.dynamic template="sub_content" data=tabData}}
+        {{> Template.dynamic template=tab data=tabData}}
         </div>
     </div>
 </template>
