--- a/client/home.html
+++ b/client/home.html
@@ -1,7 +1,7 @@
 <template name="home">
     <div id = "home">
       <h3 class = "hello">Hello</h3>
-      <h3 class = "info">You haved saved <strong>30t</strong> of CO2</h3>
-      <h3 class = "info">You haved saved <strong>$2,242</strong></h3>
+      <h3 class = "info">You have saved <strong>30t</strong> of CO2</h3>
+      <h3 class = "info">You have saved <strong>$2,242</strong></h3>
     </div>
 </template>
