--- a/client/actions.html
+++ b/client/actions.html
@@ -2,7 +2,7 @@
   <h3 class="page-header" style="text-transform: capitalize;">{{this.contentType}}</h3>
   <ul class="list-group">
     {{#each this.items}}
-      <li class="list-group-item"><strong>{{name}}</strong> by {{creator}}</li>
+      <li class="list-group-item"><strong>{{category}}</strong> by {{text}}</li>
     {{/each}}
   </ul>
 </template>
