--- a/client/reminders.html
+++ b/client/reminders.html
@@ -1,5 +1,3 @@
 <template name="reminders">
-    <body>
-        {{> fullcalendar }}
-    </body>
+    <div id="events-calendar"></div>
 </template>
