--- a/client/list_actions.html
+++ b/client/list_actions.html
@@ -12,8 +12,6 @@
 
 	<ul class="listactions" id = "list">
 	   {{#each myactions}}
-        <!-- {{> myaction}} -->
-        <!-- {{> dropdown name={{text}} data=tabData}} -->
         {{> dropdown_example}}
       {{/each}}
 	</ul>
@@ -32,7 +30,8 @@
       </ul>
         <h2>{{text}}</h2>
           <p>Description of the activity goes here</p>
-          
+          {{> Template.dynamic template="action_calendar"}}
+         <!-- {{> fullcalendar id="action_calendar" height= 650}} -->
       <ul class="submit">
         <button>Add this task to your list</button>
       </ul>
