Add events to the database

--- a/client/list_actions.html
+++ b/client/list_actions.html
@@ -28,7 +28,7 @@
     <ul class="close">
         <button>Close</button>
       </ul>
-        <h2>{{text}}</h2>
+        <h2 id='name'>{{text}}</h2>
           <p>Description of the activity goes here</p>
 <!--           {{> Template.dynamic template="action_calendar"}} -->
       <div id='calendar'>
