--- a/client/reminders.html
+++ b/client/reminders.html
@@ -1,3 +1,7 @@
 <template name="reminders">
     <div id="events-calendar"></div>
+    <div id = "popup">
+        <h2 class = "title">Add a new action: </h2>
+        {{> remind_actions}}
+    </div>
 </template>
