--- a/client/reminders.html
+++ b/client/reminders.html
@@ -1,5 +1,6 @@
 <template name="reminders">
     <div id="events-calendar"></div>
+    <div id="blackscreen"></div>
     <div id = "popup">
         <h2 class = "title">Add a new action: </h2>
         {{> remind_actions}}
