Adding events to the calendar

--- a/client/remind_actions.html
+++ b/client/remind_actions.html
@@ -22,7 +22,7 @@
 <template name="reminder_example">
     {{#if active}}
     <div class = "description">
-        <h2>{{text}}</h2>
+        <h2 id = "actiontitle">{{text}}</h2>
           <p>Description of the activity goes here</p>
         <button class = "submit">Add this task to your list</button>
         <button class = "close">Close</button>
