--- a/client/home.html
+++ b/client/home.html
@@ -1,14 +1,18 @@
 <template name="home">
     <div id = "home">
       <h3 class = "hello">Hello</h3>
-      <h3 class = "info">You have saved <strong>30t</strong> of CO2</h3>
-      <h3 class = "info">You have saved <strong>$2,242</strong></h3>
+      <h3 class = "info">You have saved <strong class = "carbon">30t</strong> of CO2</h3>
+      <h3 class = "info">You have saved <strong class = "money">$2,242</strong></h3>
     </div>
 
     <h3>Today's Tasks</h3>
     <div id ="today-list">
     {{#each this.items}}
-      <li class="list-group-item"><strong>{{text}}</strong></li>
+        <div class = "todo">
+          <li class="list-group-item"><strong>{{text}}</strong></li>
+          <button class = "complete">Wingardium Leviosa!</button>
+          <button class = "failed">Give Up...</button>
+        </div>
     {{/each}}
 	</div>
 </template>
