--- a/client/remind_actions.html
+++ b/client/remind_actions.html
@@ -17,13 +17,16 @@
       
       <input type="button" id="filter2" name="filter2" value = "Filter" />
 
-    </div>
 
-    <ul class="listactions" id = "list">
-     {{#each myactions}}
+      <ul class="listactions" id = "list">
+     {{#each myactions2}}
         {{> reminder_example}}
       {{/each}}
   </ul>
+  
+    </div>
+
+    
 
 </template>
 
