--- a/client/index.html
+++ b/client/index.html
@@ -24,9 +24,9 @@
   <div id = "dashlist">
       <ul class="nav nav-pills" id = "navigator">
         <li data-template="home" role="presentation" class="active"><a href="#">Home</a></li>
-        <li data-template="dashboard" role="presentation"><a href="#">Dashboard</a></li>
+        <li data-template="dashboard" role="presentation"><a href="#">Actions</a></li>
         <li data-template="myprofile" role="presentation"><a href="#">My Profile</a></li>
-        <li data-template="list_actions" role="presentation"><a href="#">Actions</a></li>
+<!--         <li data-template="list_actions" role="presentation"><a href="#">Actions</a></li> -->
       </ul>
   </div>
   <div>
