--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -1,9 +1,11 @@
 <template name="dashboard">
   <div id = "innerdash">
       <ul class="nav nav-pills2" id = "innernav">
-        <li data-template="activities" role="presentation" class="active"><a href="#">Recent Activities</a></li>
-        <li data-template="actions" role="presentation"><a href="#">My Actions</a></li>
-        <li data-template="reminders" role="presentation"><a href="#">Reminders</a></li>
+        <!-- <li data-template="activities" role="presentation" class="active"><a href="#">Recent Activities</a></li> -->
+        <li data-template="reminders" role="presentation"><a href="#">My Calendar</a></li>
+        <li data-template="list_actions" role="presentation"><a href="#">Add an Action</a></li>
+        <!-- <li data-template="actions" role="presentation"><a href="#">My Actions</a></li> -->
+        
       </ul>
   </div>
   <div id = "outer">
