--- a/client/list_actions.html
+++ b/client/list_actions.html
@@ -29,6 +29,8 @@
     <div class = "description">
         <h2 id='name'>{{text}}</h2>
         <p>Description of the activity goes here. Click a date and commit to taking action!</p>
+        <p id='carbonsave'>This action can save {{carbon}}t of carbon.</p>
+        <p id='moneysave'>This action can save ${{money}}.</p>
         <div id='calendar'>
             {{> action_calendar }}
         </div>
