--- a/client/saved.html
+++ b/client/saved.html
@@ -1,8 +1,8 @@
 <template name="saved">
     <div id = "home">
       <h3 class = "hello">Hello</h3>
-      <h3 class = "info">You have saved <strong class = "carbon">30t</strong> of CO2</h3>
-      <h3 class = "info">You have saved <strong class = "money">$2,242</strong></h3>
+      <h3 class = "info">You have saved <strong class = "carbon">{{this.Carbon}}t</strong> of CO2</h3>
+      <h3 class = "info">You have saved <strong class = "money">${{this.Money}}</strong></h3>
 
 
         <h3><strong>Today's Tasks</strong></h3>
