--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,9 @@
     </form>
 </template>
 
-<template name="loggedin" id = "message">
-    <p>You're logged in.</p>
-    <p><a href="#" class="logout">Logout</a></p>
+<template name="loggedin">
+    <div id = "message">
+        <p class = "message">You're logged in.</p>
+        <p class = "message"><a href="#" class="logout">Logout</a></p>
+    </div>
 </template>
