--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     {{else}}
         {{> register}}
         {{> login}}
-        <p>Login or become a quadrilateral</p>
+        <p class = "loggedout">Login or Register above. Save the world today!</p>
     {{/if}}
 
  
@@ -28,7 +28,6 @@
         <li data-template="home" role="presentation" class="active"><a href="#">Home</a></li>
         <li data-template="dashboard" role="presentation"><a href="#">Actions</a></li>
         <li data-template="myprofile" role="presentation"><a href="#">My Profile</a></li>
-<!--         <li data-template="list_actions" role="presentation"><a href="#">Actions</a></li> -->
       </ul>
   </div>
   <div>
