--- a/client/saved.html
+++ b/client/saved.html
@@ -1,7 +1,7 @@
 <template name="saved">
     <div id = "home">
       <h3 class = "hello">Hello</h3>
-      <h3 class = "info">You have saved <strong class = "carbon">{{this.Carbon}}t</strong> of CO2</h3>
+      <h3 class = "info">You have saved <strong class = "carbon">{{this.Carbon}}kg</strong> of CO2</h3>
       <h3 class = "info">You have saved <strong class = "money">${{this.Money}}</strong></h3>
 
 
