--- a/client/home.html
+++ b/client/home.html
@@ -2,7 +2,7 @@
   <div id = "innerdash">
       <ul class="nav nav-pills2" id = "innernav">
         <li data-template="saved" role="presentation"><a href="#">Dashboard</a></li>
-        <li data-template="Newsfeed" role="presentation"><a href="#">Recent Activities</a></li>
+        <li data-template="newsfeed" role="presentation"><a href="#">Recent Activities</a></li>
         
       </ul>
   </div>
