--- a/client/newsfeed.html
+++ b/client/newsfeed.html
@@ -2,7 +2,7 @@
   <h3 class="page-header" style="text-transform: capitalize;">{{this.contentType}}</h3>
   <ul class="list-group">
     {{#each this.items}}
-      <li class="list-group-item"><strong>{{category}}</strong> {{text}}</li>
+      <li class="list-group-item"><strong>{{text}}</strong>, {{date}}</li>
     {{/each}}
   </ul>
 </template>
