Popup CSS Again

--- a/client/saved.html
+++ b/client/saved.html
@@ -10,7 +10,7 @@
         {{#each this.items}}
             <div class = "todo">
               <li class="list-group-item">{{text}}</li>
-              <button class = "complete">Wingardium Leviosa!</button>
+              <button class = "complete">Finished!</button>
               <button class = "failed">Give Up...</button>
             </div>
         {{/each}}
